fix(radio): css for high contrast mode.

--- a/assets/scss/shared-ui/_radio-checkbox.scss
+++ b/assets/scss/shared-ui/_radio-checkbox.scss
@@ -118,6 +118,10 @@
 		display: inline-flex;
 		margin: 0 math.div($sui-gutter, 2) 0 0;
 	}
+
+	@media (forced-colors: active) {
+		forced-color-adjust: none;
+	}
 }
 
 @include body-class(true) {
